--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-10-05 15:32:04
+ * @LastEditTime: 2021-10-05 15:33:41
 -->
 <!DOCTYPE html>
 <html>
@@ -336,6 +336,8 @@
             <h3 align="left">
                 <a id="news"></a> <br>News</h3>
             <ul style="list-style: none;">
+                <li><span class="glyphicon glyphicon-th-list"></span> [10/2021] 1 paper to appear in NeurIPS 2021 </a> !
+                </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [05/2021] We won the 5% of the Global College Student Supercomputer Challenge (ASC20-21)</a> !
                 </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [01/2021] We won the global first prize of the <a href="http://www.asc-events.net/ASC20-21/Finals.php">2019
