--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
                         <paper-title><a href="#" target="_blank"> Speech Separation Using an Asynchronous Fully Recurrent Convolutional Neural Network</a>
                         </paper-title>
                         <div class=" paper-info">
-                            <b>Xiaolin Hu<sup>*, #</sup></b>,
-                            <a href="#" target="_blank">Kai Li<sup>*</sup></a>,
+                            <a href="#" target="_blank">Xiaolin Hu<sup>*, #</sup></a>,
+                            <b>Kai Li<sup>*</sup></b>,
                             <a href="#" target="_blank">Weiyi Zhang</a>,
                             <a href="#" target="_blank">Yi Luo</a>,
                             <a href="#" target="_blank">Jean-Marie Lemercier</a>,
