--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-10-05 15:36:23
+ * @LastEditTime: 2021-10-05 15:38:06
 -->
 <!DOCTYPE html>
 <html>
@@ -386,7 +386,7 @@
                 <!--=======AFRCNN======-->
                 <tr>
                     <td width="35%">
-                        <div class="paper-img"><img style="" align="middle" src='./img/afrcnn.png'>
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/afrcnn.png'>
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
