--- a/project/AFRCNN/index.html
+++ b/project/AFRCNN/index.html
@@ -53,8 +53,8 @@
                         </p>
                         <div class="row">
                             <div class="col-md col-sm-12">
-                                <a class="text-light" href="#">Xiaolin Hu<sup>1,*,#</sup>, </a>
-                                <a class="text-light" href="#">Kai Li (tsinghua.kaili@gmail.com)<sup>1,#</sup>, </a>
+                                <a class="text-light" href="#">Xiaolin Hu<sup>1,*</sup>, </a>
+                                <a class="text-light" href="#">Kai Li (tsinghua.kaili@gmail.com)<sup>1</sup>, </a>
                                 <a class="text-light" href="#">Weiyi Zhang<sup>1</sup> </a>
                                 <a class="text-light" href="#">Yi Luo<sup>2</sup> </a>
                                 <a class="text-light" href="#">Jean-Marie Lemercier<sup>3</sup> </a>
