--- a/project/AFRCNN/index.html
+++ b/project/AFRCNN/index.html
@@ -503,12 +503,13 @@
             </div>
         </div>
         <hr>
-        <!-- <div class="row" id="contact">
+        <div class="row" id="contact">
           <div class="col">
-            <h2>Contact</h2>
-            <div></div>
+            <center>
+                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=SAngEc2M5K6HniPVWngyyOc8NCm2S3dCV0ZBm3dHr1I&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+            </center>
           </div>
-        </div> -->
+        </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
