--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                             <name>Kai Li(李凯)</name>
                         </p>
                         <p align="left">
-                            Kai Li is a researcher assistant at Hu Lab, <i>(Department of Computer Science and Technology, Tsinghua
-                University)</i>, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>. And then he will complete his master's career in Hu Lab from 2021 to 2024.
+                            Kai Li is a master student in <i>(Department of Computer Science and Technology, Tsinghua
+                University)</i>, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>. And then he will complete his master's career in Hu Lab from 2021 to 2024. 
+                            At the same time, he is also an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervised by <a href="https://scholar.google.com/citations?hl=en&user=OSM9xooAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Yi Luo</a>.
                         </p>
                         <p align="left">
                             He got his bachelor's degree from <a href="https://cs.qhu.edu.cn/" target="_blank">Department of Computer
