Update NIPS2021 Paper Link

--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
                                     Page&nbsp;</strong></a></span>
                         <span class=" block-text">
                                         <a href="https://github.com/JusperLee/AFRCNN-For-Speech-Separation" target="_blank"> <strong>&nbsp;Github Repository&nbsp;</strong></a></span>
+                        <span class=" block-text">
+                                            <a href="https://papers.nips.cc/paper/2021/file/be1bc7997695495f756312886f566110-Paper.pdf" target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======Bachelor Degree Thesis======-->
@@ -544,7 +546,7 @@
                 <center>
                     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=pGgE1hMket84twOks8hu76lWjl5ORukOJRPcVR9nRBI&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
 
-                    <br> &copy; Kai Li | Last updated: Nov 12th, 2021 | Theme by Xintao Wang
+                    <br> &copy; Kai Li | Last updated: Dec 6th, 2021 | Theme by Xintao Wang
                 </center>
             </p>
             <span style="display: block; margin-bottom: 3em"></span>
