--- a/project/AFRCNN/index.html
+++ b/project/AFRCNN/index.html
@@ -456,10 +456,10 @@
             <div class="col">
                 <h2>Material</h2>
                 <div class="col-sm-12" style="padding-left: 0px">
-                    <a class="text-dark" href="#" style="margin-right: 10px;">
+                    <a class="text-dark" href="https://papers.nips.cc/paper/2021/file/be1bc7997695495f756312886f566110-Paper.pdf" style="margin-right: 10px;">
                         <font size="4">[Main]</font>
                     </a>
-                    <a class="text-dark" href="#" style="margin-right: 10px;">
+                    <a class="text-dark" href="https://openreview.net/attachment?id=SlxH2AbBBC2&name=supplementary_material" style="margin-right: 10px;">
                         <font size="4">[Supp]</font>
                     </a>
                     <a class="text-dark" href="./bib.txt" style="margin-right: 10px;">
@@ -504,11 +504,11 @@
         </div>
         <hr>
         <div class="row" id="contact">
-          <div class="col">
-            <center>
-                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=SAngEc2M5K6HniPVWngyyOc8NCm2S3dCV0ZBm3dHr1I&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
-            </center>
-          </div>
+            <div class="col">
+                <center>
+                    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=SAngEc2M5K6HniPVWngyyOc8NCm2S3dCV0ZBm3dHr1I&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+                </center>
+            </div>
         </div>
     </div>
     <!-- Optional JavaScript -->
