Update AFRCNN Enhancement Demo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-10-05 15:38:06
+ * @LastEditTime: 2021-12-28 23:15:15
 -->
 <!DOCTYPE html>
 <html>
@@ -443,6 +443,8 @@
                         <span class=" block-text">
                             <a href="./project/AFRCNN" target="_blank"> <strong>&nbsp;Audio Demo
                                     Page&nbsp;</strong></a></span>
+                        <span class=" block-text">
+                                        <a href="./project/AFRCNN-Enh" target="_blank"> <strong>&nbsp;Speech Enhancement Demo&nbsp;</strong></a></span>
                         <span class=" block-text">
                                         <a href="https://github.com/JusperLee/AFRCNN-For-Speech-Separation" target="_blank"> <strong>&nbsp;Github Repository&nbsp;</strong></a></span>
                         <span class=" block-text">
