Fixed AFRCNN-Enh index.html bug

--- a/project/AFRCNN-Enh/index.html
+++ b/project/AFRCNN-Enh/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script type="text/javascript">
         $(document).ready(function() {
-            $("button").click(function() {
+            $("#button1").click(function() {
                 $("#div1").toggle();
             });
         });
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-xs-12 text-left">
                 <h3>Examples</h3>
-                <button type="button" class="btn btn-info">More Comparisons <span
+                <button id="button1" type="button" class="btn btn-info">More Comparisons <span
                         class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
                 <!-- <a href="result.html"><button type="button" class="btn btn-info">Full Results on ETH3D Datasets <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button></a> -->
                 <a href="https://1drv.ms/u/s!AoA3NyEQIlSOcs4HBTm4lY9WwZc?e=N1hpmF">
