--- a/project/AFRCNN/index.html
+++ b/project/AFRCNN/index.html
@@ -468,7 +468,7 @@
                     <a class="text-dark" href="https://github.com/JusperLee/AFRCNN-For-Speech-Separation" style="margin-right: 10px;">
                         <font size="4">[Code]</font>
                     </a>
-                    <a class="text-dark" href="https://github.com/JusperLee/AFRCNN-Enh" style="margin-right: 10px;">
+                    <a class="text-dark" href="https://cslikai.cn/project/AFRCNN-Enh/" style="margin-right: 10px;">
                         <font size="4">[AFRCNN for Speech Enhancement Task]</font>
                     </a>
                 </div>
