--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-12-28 23:21:17
+ * @LastEditTime: 2022-04-14 16:04:28
 -->
 <!DOCTYPE html>
 <html>
@@ -105,18 +105,16 @@
                                 University)</i>, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>. And then he will complete his master's career in Hu Lab from 2021 to 2024.
                         </p>
                         <p align="left">
-                         He was an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervised
-                            by <a href="https://scholar.google.com/citations?hl=en&user=OSM9xooAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Yi Luo</a> from 2021.07 to 2022.01. 
-                        </p>
-                        <p align="left">
-                            He got his bachelor's degree from <a href="https://cs.qhu.edu.cn/" target="_blank">Department of Computer
+                            He was an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervi
+                            <p align="left">
+                                He got his bachelor's degree from <a href="https://cs.qhu.edu.cn/" target="_blank">Department of Computer
                                 Technology and Application</a>, the Qinghai University, supervised by Prof. <a href="https://www.qhu-hdacp.cn/hjq.html" target="_blank">Jianqiang Huang</a> and Prof.
-                            <a href="https://cs.qhu.edu.cn/jxgz/jxysz/ssyjsds/57658.htm" target="_blank">Chunmei Li</a> in 2020.
-                        </p>
-                        <p align="left">
-                            His research interests include computer vision, deep learning, speech separation and cross-model speech separation.
-                        </p>
-                        <!--<p align="left" style="color:red">
+                                <a href="https://cs.qhu.edu.cn/jxgz/jxysz/ssyjsds/57658.htm" target="_blank">Chunmei Li</a> in 2020.
+                            </p>
+                            <p align="left">
+                                His research interests include computer vision, deep learning, speech separation and cross-model speech separation.
+                            </p>
+                            <!--<p align="left" style="color:red">
             We are recruiting self-motivated interns / full-time researchers in computer vision.
             If you are interested in, feel free to contact me.
           </p>-->
@@ -378,6 +376,12 @@
                 <a id="news"></a> <br>News
             </h3>
             <ul style="list-style: none;">
+                <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 1 paper to submit in IEEE Transactions on Industrial Informatics. </a>
+                </li>
+
+                <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 2 paper to submit in Interspeech 2022. </a>
+
+                </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [10/2021] 1 paper to appear in NeurIPS 2021 </a> !
                 </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [05/2021] We won the 5% of the Global College Student Supercomputer Challenge (ASC20-21)</a> !
@@ -423,6 +427,63 @@
             <!--<h4>2018</h4>-->
 
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                <!--=======super resolution======-->
+                <tr>
+                    <td width="35%">
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        </div>
+                    </td>
+                    <td align="left" valign="top" width="65%">
+                        <paper-title><a href="#" target="_blank">Single Image Super-Resolution through Image Pixel Information Clustering and Generative Adversarial Network</a>
+                        </paper-title>
+                        <div class=" paper-info">
+                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <a href="#" target="_blank">Jianqiang Huang</a>,
+                            <a href="#" target="_blank">Lingbin Liu</a>,
+                            <a href="#" target="_blank">Jinfang Jia</a>,
+                            <a href="#" target="_blank">Yu Zhu</a>,
+                            <a href="#" target="_blank">Li Wu</a>,
+                            <a href="#" target="_blank">Xiaoying Wang</a>,
+                            <br>
+                            <em>Submitted IEEE Transactions on Industrial Informatics</em>
+                        </div>
+                    </td>
+                </tr>
+                <!--=======overss======-->
+                <tr>
+                    <td width="35%">
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        </div>
+                    </td>
+                    <td align="left" valign="top" width="65%">
+                        <paper-title><a href="#" target="_blank">On the Use of Deep Mask Estimation Module for Neural Source Separation Systems</a>
+                        </paper-title>
+                        <div class=" paper-info">
+                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>,
+                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
+                            <br>
+                            <em>Submitted Interpseech 2022</em>
+                        </div>
+                    </td>
+                </tr>
+                <!--=======joint_train======-->
+                <tr>
+                    <td width="35%">
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        </div>
+                    </td>
+                    <td align="left" valign="top" width="65%">
+                        <paper-title><a href="#" target="_blank">On the Design and Training Strategies for RNN-based Online Neural Speech Separation Systems</a>
+                        </paper-title>
+                        <div class=" paper-info">
+                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
+                            <br>
+                            <em>Submitted Interpseech 2022</em>
+                        </div>
+                    </td>
+                </tr>
                 <!--=======AFRCNN======-->
                 <tr>
                     <td width="35%">
@@ -551,7 +612,7 @@
                 <center>
                     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=pGgE1hMket84twOks8hu76lWjl5ORukOJRPcVR9nRBI&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
 
-                    <br> &copy; Kai Li | Last updated: Mar 14th, 2022 | Theme by Xintao Wang
+                    <br> &copy; Kai Li | Last updated: April 14th, 2022 | Theme by Xintao Wang
                 </center>
             </p>
             <span style="display: block; margin-bottom: 3em"></span>
@@ -571,5 +632,7 @@
         gitalk.render('gitalk-container')
     </script>
 </body>
+
+</html>
 
 </html>
