--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                         <paper-title><a href="#" target="_blank">Single Image Super-Resolution through Image Pixel Information Clustering and Generative Adversarial Network</a>
                         </paper-title>
                         <div class=" paper-info">
-                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <b>Kai Li</b>,
                             <a href="#" target="_blank">Jianqiang Huang</a>,
                             <a href="#" target="_blank">Lingbin Liu</a>,
                             <a href="#" target="_blank">Jinfang Jia</a>,
@@ -459,7 +459,7 @@
                         <paper-title><a href="#" target="_blank">On the Use of Deep Mask Estimation Module for Neural Source Separation Systems</a>
                         </paper-title>
                         <div class=" paper-info">
-                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <b>Kai Li</b>,
                             <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>,
                             <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
                             <br>
@@ -477,7 +477,7 @@
                         <paper-title><a href="#" target="_blank">On the Design and Training Strategies for RNN-based Online Neural Speech Separation Systems</a>
                         </paper-title>
                         <div class=" paper-info">
-                            <a href="https://cslikai.cn" target="_blank"><b>Kai Li</b></a>,
+                            <b>Kai Li</b>,
                             <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
                             <br>
                             <em>Submitted Interpseech 2022</em>
