--- a/index.html
+++ b/index.html
@@ -376,6 +376,8 @@
                 <a id="news"></a> <br>News
             </h3>
             <ul style="list-style: none;">
+                <li><span class="glyphicon glyphicon-th-list"></span> [05/2022] 1 paper to submit in Nature Machine Intelligence. </a>
+                </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 1 paper to submit in IEEE Transactions on Industrial Informatics. </a>
                 </li>
 
@@ -427,6 +429,26 @@
             <!--<h4>2018</h4>-->
 
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                <!--=======Audio visual======-->
+                <tr>
+                    <td width="35%">
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        </div>
+                    </td>
+                    <td align="left" valign="top" width="65%">
+                        <paper-title><a href="#" target="_blank">An Auditory-Visual Speech Separation Model Inspired by Cortico-thalamo-cortical Circuits</a>
+                        </paper-title>
+                        <div class=" paper-info">
+                            <b>Kai Li</b>,
+                            <a href="#" target="_blank">Fenghua Xie</a>,
+                            <a href="#" target="_blank">Hang Chen</a>,
+                            <a href="#" target="_blank">Kexin Yuan</a>,
+                            <a href="#" target="_blank">Xiaolin Hu</a>,
+                            <br>
+                            <em>Submitted Nature Machine Intelligence</em>
+                        </div>
+                    </td>
+                </tr>
                 <!--=======super resolution======-->
                 <tr>
                     <td width="35%">
