--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-04-14 16:04:28
+ * @LastEditTime: 2022-05-28 21:10:19
 -->
 <!DOCTYPE html>
 <html>
@@ -98,26 +98,33 @@
                 <tr>
                     <td width="67%" valign="middle">
                         <p align="center">
-                            <name>Kai Li(李凯)</name>
+                            <name>Hi There!</name>
                         </p>
                         <p align="left">
-                            Kai Li is a master student in <i>(Department of Computer Science and Technology, Tsinghua
-                                University)</i>, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>. And then he will complete his master's career in Hu Lab from 2021 to 2024.
+                            My name is Kai Li (Chinese name: 李凯). I'm is a first-year master student at Department of Computer Science and Technology, Tsinghua University, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>.
+                            My research interests include super resolution, speech separation and cross-model speech separation.
                         </p>
                         <p align="left">
-                            He was an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervi
+                            He was an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervised by <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank"> Yi Luo </a>.
                             <p align="left">
                                 He got his bachelor's degree from <a href="https://cs.qhu.edu.cn/" target="_blank">Department of Computer
                                 Technology and Application</a>, the Qinghai University, supervised by Prof. <a href="https://www.qhu-hdacp.cn/hjq.html" target="_blank">Jianqiang Huang</a> and Prof.
                                 <a href="https://cs.qhu.edu.cn/jxgz/jxysz/ssyjsds/57658.htm" target="_blank">Chunmei Li</a> in 2020.
                             </p>
-                            <p align="left">
-                                His research interests include computer vision, deep learning, speech separation and cross-model speech separation.
+                            <p align="left" style="color:orange">
+                                Notes <i class="fa fa-exclamation" aria-hidden="true" color="red"></i>
                             </p>
-                            <!--<p align="left" style="color:red">
-            We are recruiting self-motivated interns / full-time researchers in computer vision.
-            If you are interested in, feel free to contact me.
-          </p>-->
+                            <ul style="list-style: none;">
+                                <li>
+                                    <p align="left" style="color:orange"><span class="glyphicon glyphicon-fire" style="color:red"></span> These works are open source to the best of my ability.
+                                    </p>
+                                </li>
+                                <li>
+                                    <p align="left" style="color:orange"><span class="glyphicon glyphicon-fire" style="color:red"></span> I am currently doing research on multimodal speech separation, and am interested in other speech tasks (e.g., pre-training models). If you would like
+                                        to collaborate, please contact me. Many thanks.</p>
+                        </p>
+                        </li>
+                        </ul>
                     </td>
                     <td width="33%">
                         <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
@@ -381,7 +388,8 @@
                 <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 1 paper to submit in IEEE Transactions on Industrial Informatics. </a>
                 </li>
 
-                <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 2 paper to submit in Interspeech 2022. </a>
+                <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 2 paper to submit in Interspeech 2022.
+                    </a>
 
                 </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [10/2021] 1 paper to appear in NeurIPS 2021 </a> !
@@ -399,25 +407,28 @@
                 </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [01/2020] I am an algorithm intern at Moyin Technology for speech dirazation and voiceprint recognition.
                 </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] 1 paper to appear in ISPA2019.
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] We won the first prize of the first "Ganqingning" Innovation and Entrepreneurship Competition !
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] I won the National Scholarship, Ministry of Education, China !
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] We won the second prize in the Natural Academic Paper category of the National College Student Challenge Cup Qinghai Provincial Trial !
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] We won the first prize in the Qinghai Division of the 6th National Youth Science Innovation Experiment and Work Competition !
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] 1 papers to appear in ICDIP2019.
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [04/2019] I won the second prize at the provincial level in the Blue Bridge Cup Java Group A!
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [03/2019] We won the global second prize of the <a href="http://www.asc-events.net/ASC19/Preliminary.php">2019
-                        Global College Student Supercomputer Challenge (ASC19)</a> !
-                </li>
-                <li><span class="glyphicon glyphicon-th-list"></span> [12/2018] We won the first prize of natural academic paper in the first "Principals Cup" Innovation and Entrepreneurship Competition in Qinghai Province !
-                </li>
+                <details>
+                    <summary>▶ Click for More</summary>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] 1 paper to appear in ISPA2019.
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] We won the first prize of the first "Ganqingning" Innovation and Entrepreneurship Competition !
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [11/2019] I won the National Scholarship, Ministry of Education, China !
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] We won the second prize in the Natural Academic Paper category of the National College Student Challenge Cup Qinghai Provincial Trial !
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] We won the first prize in the Qinghai Division of the 6th National Youth Science Innovation Experiment and Work Competition !
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [05/2019] 1 papers to appear in ICDIP2019.
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [04/2019] I won the second prize at the provincial level in the Blue Bridge Cup Java Group A!
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [03/2019] We won the global second prize of the <a href="http://www.asc-events.net/ASC19/Preliminary.php">2019
+                            Global College Student Supercomputer Challenge (ASC19)</a> !
+                    </li>
+                    <li><span class="glyphicon glyphicon-th-list"></span> [12/2018] We won the first prize of natural academic paper in the first "Principals Cup" Innovation and Entrepreneurship Competition in Qinghai Province !
+                    </li>
+                </details>
             </ul>
 
 
@@ -436,7 +447,8 @@
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
-                        <paper-title><a href="#" target="_blank">An Auditory-Visual Speech Separation Model Inspired by Cortico-thalamo-cortical Circuits</a>
+                        <paper-title><a href="#" target="_blank">An Auditory-Visual Speech Separation Model Inspired by
+                                Cortico-thalamo-cortical Circuits</a>
                         </paper-title>
                         <div class=" paper-info">
                             <b>Kai Li</b>,
@@ -456,7 +468,8 @@
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
-                        <paper-title><a href="#" target="_blank">Single Image Super-Resolution through Image Pixel Information Clustering and Generative Adversarial Network</a>
+                        <paper-title><a href="#" target="_blank">Single Image Super-Resolution through Image Pixel
+                                Information Clustering and Generative Adversarial Network</a>
                         </paper-title>
                         <div class=" paper-info">
                             <b>Kai Li</b>,
@@ -478,12 +491,14 @@
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
-                        <paper-title><a href="#" target="_blank">On the Use of Deep Mask Estimation Module for Neural Source Separation Systems</a>
+                        <paper-title><a href="#" target="_blank">On the Use of Deep Mask Estimation Module for Neural
+                                Source Separation Systems</a>
                         </paper-title>
                         <div class=" paper-info">
                             <b>Kai Li</b>,
                             <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>,
-                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
+                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi
+                                Luo</a>,
                             <br>
                             <em>Submitted Interpseech 2022</em>
                         </div>
@@ -496,11 +511,13 @@
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
-                        <paper-title><a href="#" target="_blank">On the Design and Training Strategies for RNN-based Online Neural Speech Separation Systems</a>
+                        <paper-title><a href="#" target="_blank">On the Design and Training Strategies for RNN-based
+                                Online Neural Speech Separation Systems</a>
                         </paper-title>
                         <div class=" paper-info">
                             <b>Kai Li</b>,
-                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi Luo</a>,
+                            <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi
+                                Luo</a>,
                             <br>
                             <em>Submitted Interpseech 2022</em>
                         </div>
@@ -530,11 +547,14 @@
                             <a href="./project/AFRCNN" target="_blank"> <strong>&nbsp;Audio Demo
                                     Page&nbsp;</strong></a></span>
                         <span class=" block-text">
-                                        <a href="./project/AFRCNN-Enh" target="_blank"> <strong>&nbsp;Speech Enhancement Demo&nbsp;</strong></a></span>
+                            <a href="./project/AFRCNN-Enh" target="_blank"> <strong>&nbsp;Speech Enhancement
+                                    Demo&nbsp;</strong></a></span>
                         <span class=" block-text">
-                                        <a href="https://github.com/JusperLee/AFRCNN-For-Speech-Separation" target="_blank"> <strong>&nbsp;Github Repository&nbsp;</strong></a></span>
+                            <a href="https://github.com/JusperLee/AFRCNN-For-Speech-Separation" target="_blank">
+                                <strong>&nbsp;Github Repository&nbsp;</strong></a></span>
                         <span class=" block-text">
-                                            <a href="https://papers.nips.cc/paper/2021/file/be1bc7997695495f756312886f566110-Paper.pdf" target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
+                            <a href="https://papers.nips.cc/paper/2021/file/be1bc7997695495f756312886f566110-Paper.pdf"
+                                target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======Bachelor Degree Thesis======-->
