Update Paper files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-05-28 21:10:19
+ * @LastEditTime: 2022-06-05 01:15:41
 -->
 <!DOCTYPE html>
 <html>
@@ -602,6 +602,8 @@
                             <br>
                             <em>IET Image Processing, 2020</em>
                         </div>
+                        <span class=" block-text">
+                            <a href="./files/A_Survey_of_Single_Image_Super_Resolution_Reconstr.pdf" target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======Single Image Super-resolution Reconstruction of Enhanced Loss Function with Multi-GPU Training======-->
@@ -622,6 +624,8 @@
                             <br>
                             <em>Parallel & Distributed Processing with Applications(ISPA), 2019</em>
                         </div>
+                        <span class=" block-text">
+                            <a href="./files/Single_Image_Super-Resolution_Reconstruction_of_Enhanced_Loss_Function_with_Multi-GPU_Training.pdf" target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======Single image super resolution based on generative adversarial networks======-->
@@ -641,6 +645,8 @@
                             <br>
                             <em>International Conference on Digital Image Processing (ICDIP), 2019</em>
                         </div>
+                        <span class=" block-text">
+                            <a href="./files/111790T.pdf" target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 </td>
