--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-06-05 01:15:41
+ * @LastEditTime: 2022-06-05 02:15:43
 -->
 <!DOCTYPE html>
 <html>
@@ -639,7 +639,7 @@
                                 networks</a>
                         </paper-title>
                         <div class=" paper-info">
-                            <b>Kai Li</b>, Shenghao Yang,
+                            <b>Kai Li</b>, Liang Ye, Shenghao Yang,
                             <a href="https://www.qhu-hdacp.cn/hjq.html" target="_blank">Jianqiang Huang</a>,
                             <a href="https://www.qhu-hdacp.cn/wxy.html" target="_blank">Xiaoying Wang</a>
                             <br>
