--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-06-05 02:15:43
+ * @LastEditTime: 2022-06-16 00:43:53
 -->
 <!DOCTYPE html>
 <html>
@@ -383,6 +383,8 @@
                 <a id="news"></a> <br>News
             </h3>
             <ul style="list-style: none;">
+                <li><span class="glyphicon glyphicon-th-list"></span> [05/2022] 1 paper to appear in Interpseech 2022 !
+                </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [05/2022] 1 paper to submit in Nature Machine Intelligence. </a>
                 </li>
                 <li><span class="glyphicon glyphicon-th-list"></span> [03/2022] 1 paper to submit in IEEE Transactions on Industrial Informatics. </a>
@@ -487,7 +489,7 @@
                 <!--=======overss======-->
                 <tr>
                     <td width="35%">
-                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/deep_mask.png'>
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
@@ -500,14 +502,14 @@
                             <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi
                                 Luo</a>,
                             <br>
-                            <em>Submitted Interpseech 2022</em>
+                            <em>Interpseech 2022</em>
                         </div>
                     </td>
                 </tr>
                 <!--=======joint_train======-->
                 <tr>
                     <td width="35%">
-                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/causal.png'>
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
@@ -519,7 +521,7 @@
                             <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank">Yi
                                 Luo</a>,
                             <br>
-                            <em>Submitted Interpseech 2022</em>
+                            <em>Arxiv 2022</em>
                         </div>
                     </td>
                 </tr>
@@ -660,7 +662,7 @@
                 <center>
                     <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=pGgE1hMket84twOks8hu76lWjl5ORukOJRPcVR9nRBI&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
 
-                    <br> &copy; Kai Li | Last updated: June 1st, 2022 | Theme by Xintao Wang
+                    <br> &copy; Kai Li | Last updated: June 16st, 2022 | Theme by Xintao Wang
                 </center>
             </p>
             <span style="display: block; margin-bottom: 3em"></span>
