--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-06-16 00:43:53
+ * @LastEditTime: 2022-06-16 00:49:52
 -->
 <!DOCTYPE html>
 <html>
@@ -466,7 +466,7 @@
                 <!--=======super resolution======-->
                 <tr>
                     <td width="35%">
-                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/submitted.png'>
+                        <div class="paper-img"><img style="margin: auto;" align="middle" src='./img/cl-gan.png'>
                         </div>
                     </td>
                     <td align="left" valign="top" width="65%">
