--- a/index.html
+++ b/index.html
@@ -504,6 +504,9 @@
                             <br>
                             <em>Interpseech 2022</em>
                         </div>
+                        <span class=" block-text">
+                            <a href="http://arxiv.org/pdf/2206.07347v1"
+                                target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======joint_train======-->
@@ -523,6 +526,9 @@
                             <br>
                             <em>Arxiv 2022</em>
                         </div>
+                        <span class=" block-text">
+                            <a href="http://arxiv.org/pdf/2206.07340v1"
+                                target="_blank"> <strong>&nbsp;Paper&nbsp;</strong></a></span>
                     </td>
                 </tr>
                 <!--=======AFRCNN======-->
