--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Kai Li
  * @Date: 2021-06-10 22:22:59
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2022-06-16 00:49:52
+ * @LastEditTime: 2022-06-19 02:20:18
 -->
 <!DOCTYPE html>
 <html>
@@ -102,7 +102,8 @@
                         </p>
                         <p align="left">
                             My name is Kai Li (Chinese name: 李凯). I'm is a first-year master student at Department of Computer Science and Technology, Tsinghua University, supervised by Prof. <a href="http://www.xlhu.cn/" target="_blank">Xiaolin Hu</a>.
-                            My research interests include super resolution, speech separation and cross-model speech separation.
+                            I am also a member of <a href="https://ml.cs.tsinghua.edu.cn/" target="_blank">TSAIL Group</a> directed by Prof. <a href="https://www.cs.tsinghua.edu.cn/info/1121/3552.htm" target="_blank">Bo Zhang</a> and Prof. <a href="https://ml.cs.tsinghua.edu.cn/~jun/index.shtml"
+                                target="_blank">Jun Zhu</a>. My research interests include super resolution, speech separation and cross-model speech separation.
                         </p>
                         <p align="left">
                             I was an intern at Tencent AI Lab, mainly doing research on causal speech separation, supervised by <a href="https://scholar.google.com/citations?user=OSM9xooAAAAJ&hl=en" target="_blank"> Yi Luo </a>.
