--- a/project/CTCNet/index.html
+++ b/project/CTCNet/index.html
@@ -341,7 +341,7 @@
           </div>
         </div>
       </div>
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=e03sCpn-Bps2eQqelImPAkqTapmP6oKuYM5grbgArH8'></script>
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=312&t=tt&d=e03sCpn-Bps2eQqelImPAkqTapmP6oKuYM5grbgArH8'></script>
     </div>
   </footer>
 
